src/objects/Capital_Expenditure__c.object
<CustomObject>
    <description>Object for maintaining CAPEX information for our Admin team in Salesforce</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Capital_Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>FY14</fullName>
                </value>
                <value>
                    <fullName>FY15</fullName>
                </value>
                <value>
                    <fullName>FY16</fullName>
                </value>
                <value>
                    <fullName>FY17</fullName>
                </value>
                <value>
                    <fullName>FY18</fullName>
                </value>
                <value>
                    <fullName>FY19</fullName>
                </value>
                <value>
                    <fullName>FY20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <inlineHelpText>Hours spent on item.</inlineHelpText>
        <label>Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>Name/description of the actual task.</inlineHelpText>
        <label>Project/Item Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Item_Name__c</fullName>
        <label>Project/Item Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Apttus Implementation</fullName>
                </value>
                <value>
                    <fullName>Custom Address Implementation</fullName>
                </value>
                <value>
                    <fullName>Daikin Tools Integration</fullName>
                </value>
                <value>
                    <fullName>IE Implementation</fullName>
                </value>
                <value>
                    <fullName>Latin America ERP Implementation</fullName>
                </value>
                <value>
                    <fullName>Misc. Case</fullName>
                </value>
                <value>
                    <fullName>Misc. Change Request</fullName>
                </value>
                <value>
                    <fullName>PAR/Pipeline Implementation</fullName>
                </value>
                <value>
                    <fullName>TRC Console Page Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Capital Expenditures</relationshipLabel>
        <relationshipName>Capital_Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Change_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Change Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Capital Expenditures</relationshipLabel>
        <relationshipName>Capital_Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Capital Expenditure</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Capital Expenditure Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Expenditures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Change_Request_Case_Lookup_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(Text(Project_Item_Name__c) = &quot;Misc. Case&quot; &amp;&amp;  ISBLANK( Related_Case__c)) || (Text(Project_Item_Name__c) = &quot;Misc. Change Request&quot; &amp;&amp;  ISBLANK(Related_Change_Request__c))</errorConditionFormula>
        <errorMessage>You must provide Project Description details for items of type Misc. Case &amp; Misc. Change Request.</errorMessage>
    </validationRules>
</CustomObject>